nav overflow fix

--- a/media.css
+++ b/media.css
@@ -5,6 +5,10 @@
 */
 
 @media (max-width: 81em) {
+  body {
+    overflow-x: hidden;
+  }
+
   .main-hero-section {
     max-width: 120rem;
   }
@@ -163,7 +167,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: all 1000ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: all 1000ms ease-in;
     transform: translate(100%);
     /* transition will not work o display none property */
     opacity: 0;
@@ -175,7 +179,7 @@
     pointer-events: all;
     visibility: visible;
     transform: translate(0%);
-    gap: 4.8rem;
+    gap: 3.8rem;
   }
 
   .header-nav-link:link,
