--- a/style.css
+++ b/style.css
@@ -35,12 +35,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* outline: 1px solid green; */
 }
 
 :root {
   font-size: 62.5%;
   scroll-behavior: smooth !important;
+  overflow-x: hidden;
 }
 body {
   font-family: "Rubik", sans-serif;
@@ -48,7 +48,7 @@ body {
   color: #555;
   line-height: 1;
   font-weight: 400;
-  position: relative;
+
   overflow-x: hidden;
 }
 
@@ -160,6 +160,9 @@ li {
   align-items: center;
   background-color: #fdf2e9;
   padding: 1.6rem 3.2rem;
+
+  /* if you don't set the position property on parent element position absolute, fixed will overflow and in realtion with the viewport */
+  position: relative;
 }
 
 .header-nav-link:link,
@@ -167,7 +170,7 @@ li {
   color: #222222;
   font-weight: 500;
   font-size: 1.6rem;
-  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: all 300ms ease-in;
 }
 
 .header-nav-link:hover {
